public class Account {
  //todo: follow the classdiagram as you implement this very simple class. Try to guess what the methods should do
    private String name;

}
