@startuml
!pragma layout smetana
class Main{
+ static UI ui
+ static void main(String[] args)
}


class Bank{
 - String name
 - ArrayList<Customer> customers
 - ArrayList<String> listOfActions
 + Bank(String name)
 - Customer currentCustomer
 - void createCustomer(String name)
 + void userDialog()
}

class Customer{
- String name
- ArrayList<Account> accounts
- Account currentAccount
+ Customer()
+ void createAccount(String name)
+ void deposit(int amount)
+ String getAccountDetails(int accountID)
+ void setCurrentAccount(Account account)
+ String toString()
}
class Account{
- String name
- int balance
+ Account(String name)
+ void setBalance(int amount)
+ String toString()
+ String getName()
}

class UI{
- Scanner scanner
+ void displayMsg(String s)
+ int promptNumeric(String msg)
+ String promptText(String msg)
+ int promptChoice(String msg, ArrayList<String> list)

}

Main *-- UI
Main *-- Bank
Bank *-- Customer
Customer *-- Account
@enduml